# swali-ai

./: .coverage.Tatyanas-MacBook-Air_local.pid19950.XkeDbNZx.HNQIp837rWOh  .coverage.Tatyanas-MacBook-Air_local.pid30822.XT10wy9x.HNQIp837rWOh  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Makefile  README.md  WALKTHROUGH.md  agents.md  contributing.md  docker-composer.dev.yml  experiments.md  progress.md  pyproject.toml  pyrightconfig.json  security.md
.github/workflows/: tests.yml
backend/: main.py
backend/app/: __init__.py  auth.py  config.py  storage.py
backend/app/evaluation/: __init__.py
backend/app/models/: __init__.py  schemas.py
backend/app/prompts/: __init__.py
backend/app/rag/: __init__.py  embeddings.py  generator.py  llm.py  reranker.py  vectorstore.py
backend/app/routers/: __init__.py  auth.py  chat.py  learning.py  search.py
backend/app/services/: __init__.py  sandbox.py  (+2 more)
data/: schema.md
docs/: architecture.md
docs/decisions/: 001-embedding-model-selection.md
evaluation/: readme.md  run_eval.py
experiments/: run_20260218_103225.json  run_20260218_103228.json  run_20260218_103246.json  run_20260218_103436.json  run_20260218_103439.json  run_20260218_103445_embedA.json  run_20260218_103445_embedB.json
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
prompts/: readme.md
scripts/: bootstrap_variants.py  collect_ai_ml.py  collect_external_corpus.py  collect_leetcode.py  collect_neetcode.py  collect_system_design.py  process_data.py  run_retrieval_experiments.py
scripts/data_pipeline/: __init__.py  chunking.py  deduplicate.py  ingestion.py  normalize.py
sr/: exceptions.py
src/config/: settings.py
src/utils/: logger.py
tests/: __init__.py  test_embeddings.py  test_rag_pipeline_integration.py  test_reranker.py  test_vectorstore.py
(+82 files in other folders)
